--- a/UserServiece/src/main/resources/application.yaml
+++ b/UserServiece/src/main/resources/application.yaml
@@ -1,10 +1,8 @@
 server:
-  port: 9001
-
+  port: 9002
 spring:
   application:
-    name: DEPARTMENT-SERVICE
-
+    name: USER-SERVICE
 eureka:
   client:
     register-with-eureka: true
